--- a/app/globals.css
+++ b/app/globals.css
@@ -1,16 +1,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+*{
+  scroll-behavior: smooth;
+}
 @font-face{
   font-family: "Revans";
-  src: url("34dd27c20420ff2f3eee92ad5a1138b3.eot");
-  src: url("34dd27c20420ff2f3eee92ad5a1138b3.eot?#iefix")format("embedded-opentype"),
-      url("34dd27c20420ff2f3eee92ad5a1138b3.woff")format("woff"),
-      url("34dd27c20420ff2f3eee92ad5a1138b3.woff2")format("woff2"),
-      url("34dd27c20420ff2f3eee92ad5a1138b3.ttf")format("truetype"),
-      url("34dd27c20420ff2f3eee92ad5a1138b3.svg#Revans")format("svg");
-  font-weight:normal;
-  font-style:normal;
-  font-display:swap;
+  src: url("../fonts/Revans/Revans.ttf");
+  font-weight: 400;
+}
+@font-face{
+  font-family: "roslindale";
+  src: url("../fonts/roslindale/Roslindale-DeckNarrowMedium-Testing.ttf");
+  font-weight: 400;
+}
+@font-face{
+  font-family: "Mint-Grotesk";
+  src: url("../fonts/mint-grotesk/MintGroteskTrial.otf");
+  font-weight: 500;
+}
+.body{
+  -webkit-backdrop-filter: blur(16px);
+  backdrop-filter: blur(70px);
+}
+
+::-webkit-scrollbar{
+  width: 8px;
+  border-radius: 8px;
+  background-color:#0e1012 ;
+
+}
+::-webkit-scrollbar-thumb{
+  border-radius: 8px;
+  background-color: #f3f6fa ;
+}
+::-webkit-scrollbar-track{
+  background-color:#0e1012 ;
 }
