--- a/app/globals.css
+++ b/app/globals.css
@@ -37,3 +37,49 @@
 ::-webkit-scrollbar-track{
   background-color:#0e1012 ;
 }
+
+@layer utilities {
+  .res-text-xs {
+      @apply text-xs md:text-sm;
+  }
+
+  .res-text-sm {
+      @apply text-sm md:text-base;
+  }
+
+  .res-text-base {
+      @apply text-base md:text-lg;
+  }
+
+  .res-text-lg {
+      @apply text-lg md:text-xl;
+  }
+
+  .res-text-xl {
+      @apply text-xl md:text-2xl;
+  }
+
+  .res-heading-xs {
+      @apply text-base sm:text-lg md:text-xl;
+  }
+
+  .res-heading-sm {
+      @apply text-lg sm:text-xl md:text-2xl;
+  }
+
+  .res-heading-base {
+      @apply text-xl sm:text-2xl md:text-3xl;
+  }
+
+  .res-heading-lg {
+      @apply text-2xl sm:text-3xl md:text-4xl;
+  }
+
+  .res-heading-xl {
+      @apply text-3xl sm:text-4xl md:text-5xl;
+  }
+
+  .res-heading-2xl {
+      @apply text-4xl sm:text-5xl md:text-6xl;
+  }
+}
