--- a/app/globals.css
+++ b/app/globals.css
@@ -1,85 +1,89 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-*{
+* {
   scroll-behavior: smooth;
 }
-@font-face{
+@font-face {
   font-family: "Revans";
   src: url("../fonts/Revans/Revans.ttf");
   font-weight: 400;
 }
-@font-face{
+@font-face {
   font-family: "roslindale";
   src: url("../fonts/roslindale/Roslindale-DeckNarrowMedium-Testing.ttf");
   font-weight: 400;
 }
-@font-face{
+@font-face {
   font-family: "Mint-Grotesk";
   src: url("../fonts/mint-grotesk/MintGroteskTrial.otf");
   font-weight: 500;
 }
-.body{
-  -webkit-backdrop-filter: blur(16px);
-  backdrop-filter: blur(70px);
-}
-
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 8px;
   border-radius: 8px;
-  background-color:#0e1012 ;
-
+  background-color: #0e1012;
 }
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   border-radius: 8px;
-  background-color: #f3f6fa ;
+  background-color: #f3f6fa;
 }
-::-webkit-scrollbar-track{
-  background-color:#0e1012 ;
+::-webkit-scrollbar-track {
+  background-color: #0e1012;
 }
 
 @layer utilities {
   .res-text-xs {
-      @apply text-xs md:text-sm;
+    @apply text-xs md:text-sm;
   }
 
   .res-text-sm {
-      @apply text-sm md:text-base;
+    @apply text-sm md:text-base;
   }
 
   .res-text-base {
-      @apply text-base md:text-lg;
+    @apply text-base md:text-lg;
   }
 
   .res-text-lg {
-      @apply text-lg md:text-xl;
+    @apply text-lg md:text-xl;
   }
 
   .res-text-xl {
-      @apply text-xl md:text-2xl;
+    @apply text-xl md:text-2xl;
   }
 
   .res-heading-xs {
-      @apply text-base sm:text-lg md:text-xl;
+    @apply text-base sm:text-lg md:text-xl;
   }
 
   .res-heading-sm {
-      @apply text-lg sm:text-xl md:text-2xl;
+    @apply text-lg sm:text-xl md:text-2xl;
   }
 
   .res-heading-base {
-      @apply text-xl sm:text-2xl md:text-3xl;
+    @apply text-xl sm:text-2xl md:text-3xl;
   }
 
   .res-heading-lg {
-      @apply text-2xl sm:text-3xl md:text-4xl;
+    @apply text-2xl sm:text-3xl md:text-4xl;
   }
 
   .res-heading-xl {
-      @apply text-3xl sm:text-4xl md:text-5xl;
+    @apply text-3xl sm:text-4xl md:text-5xl;
   }
 
   .res-heading-2xl {
-      @apply text-4xl sm:text-5xl md:text-6xl;
+    @apply text-4xl sm:text-5xl md:text-6xl;
+  }
+  .res-heading-3xl {
+    @apply text-5xl sm:text-6xl md:text-7xl;
+  }
+  .res-heading-4xl {
+    @apply text-6xl sm:text-7xl md:text-8xl;
+  }
+  .res-heading-5xl {
+    @apply text-7xl sm:text-8xl md:text-9xl;
   }
 }
+
